syntax = "proto3";

package crypto.v1alpha1;

enum KeyType {
  KEY_TYPE_UNSPECIFIED = 0;
  KEY_TYPE_RSA = 1;
  KEY_TYPE_ED25519 = 2;
  KEY_TYPE_SECP256K1 = 3;
  KEY_TYPE_ECDSA = 4;
}

message PublicKey {
  KeyType type = 1;
  bytes data = 2;
}

message PrivateKey {
  KeyType type = 1;
  bytes data = 2;
}
